@@ -20,6 +20,7 @@ Included
 - Launchpad shell doctor parsing now prioritizes explicit `ShellDoctorStatus: FAIL code=...` extraction before generic `code=` fallback parsing.
 - Launchpad shell doctor invocation now uses resolved `$powershellExe` path instead of command-name lookup to reduce PATH-dependent behavior drift.
 - Launchpad adapter doctor bracket-code parsing now anchors to line-start reason format (`[CODE]`) to avoid accidental non-reason bracket token extraction.
+- Launchpad shortcut/history list ordering now uses deterministic UTF-8 byte-key sorting (`Get-StableSortKey`) instead of locale-sensitive `Sort-Object Name`.
 - Launchpad History successful report open now resets viewer startup state (`UseReportViewer=1`, `ReportViewerAutoOpen=1`, `ReportViewerStartFailCount=0`) so manual viewer opens self-heal auto-open disable state.
 - Evidence typing added to operator reports (additive, non-breaking):
 - `report_card.txt` now includes an evidence legend and claim mapping lines:
